Front-end: Projeto de conclusão
obs: correção bug: margin do title & do fechamento da chave da função scroll

--- a/css/about.css
+++ b/css/about.css
@@ -1,6 +1,6 @@
 .panel-about{
     /* afastar o conteúdo que está colado */
-    margin-bottom: 20px;
+    margin-top: 20px;
     /* centralizar */
     text-align: center;
 }
